/**
 * Copyright 2020 Inrupt Inc.
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal in
 * the Software without restriction, including without limitation the rights to use,
 * copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the
 * Software, and to permit persons to whom the Software is furnished to do so,
 * subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED,
 * INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A
 * PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
 * HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
 * OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
 * SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 */

import React from "react";
import userEvent from "@testing-library/user-event";
import { renderWithTheme } from "../../../../__testUtils/withTheme";
import AgentAccessTable from "./index";
import useNamedPolicyPermissions from "../../../../src/hooks/useNamedPolicyPermissions";
import usePermissionsWithProfiles from "../../../../src/hooks/usePermissionsWithProfiles";

jest.mock("../../../../src/hooks/useNamedPolicyPermissions");
jest.mock("../../../../src/hooks/usePermissionsWithProfiles");

const permissions = [
  {
    acl: {
      read: true,
      write: true,
      append: false,
      control: false,
    },
    webId: "https://example1.com/profile/card#me",
    profile: {
      avatar: null,
      name: "Example 1",
      types: ["https://schema.org/Person"],
    },
  },
  {
    acl: {
      read: true,
      write: true,
      append: false,
      control: false,
    },
    webId: "https://example2.com/profile/card#me",
    profile: {
      avatar: null,
      name: "Example 2",
      types: ["https://schema.org/Person"],
    },
  },
  {
    acl: {
      read: true,
      write: true,
      append: false,
      control: false,
    },
    webId: "https://example3.com/profile/card#me",
    profile: {
      avatar: null,
      name: "Example 3",
      types: ["https://schema.org/Person"],
    },
  },
  {
    acl: {
      read: true,
      write: true,
      append: false,
      control: false,
    },
    webId: "https://example4.com/profile/card#me",
    profile: {
      avatar: null,
      name: "Example 4",
      types: ["https://schema.org/Person"],
    },
  },
];

const sharePermissions = [
  {
    acl: {
      read: true,
      write: true,
      append: true,
      control: true,
    },
    webId: "https://example1.com/profile/card#me",
    profile: {
      avatar: null,
      name: "Example 1",
      types: ["https://schema.org/Person"],
    },
  },
];

describe("AgentAccessTable", () => {
  it("renders an empty list of permissions", () => {
    const type = "editors";
    useNamedPolicyPermissions.mockReturnValue({ data: [], mutate: jest.fn() });
    usePermissionsWithProfiles.mockReturnValue({ permissionsWithProfiles: [] });
    const { asFragment } = renderWithTheme(<AgentAccessTable type={type} />);

    expect(asFragment()).toMatchSnapshot();
  });
  it("renders a list of permissions", async () => {
    useNamedPolicyPermissions.mockReturnValueOnce({
      data: [
        {
          acl: {
            read: true,
            write: true,
            append: false,
            control: false,
          },
          webId: "https://example1.com/profile/card#me",
          profile: {
            avatar: null,
            name: "Example 1",
            types: ["https://schema.org/Person"],
          },
        },
      ],
      mutate: jest.fn(),
    });
    usePermissionsWithProfiles.mockReturnValue({
      permissionsWithProfiles: [
        {
          acl: {
            read: true,
            write: true,
            append: false,
            control: false,
          },
          webId: "https://example1.com/profile/card#me",
          profile: {
            avatar: null,
            name: "Example 1",
            types: ["https://schema.org/Person"],
          },
        },
      ],
    });
    useNamedPolicyPermissions.mockReturnValueOnce({
      data: sharePermissions,
      mutate: jest.fn(),
    });
    const type = "editors";
    const { asFragment, queryAllByRole } = renderWithTheme(
      <AgentAccessTable type={type} />
    );

    expect(queryAllByRole("cell")).toHaveLength(1);
    expect(asFragment()).toMatchSnapshot();
  });
  it("shows all permissions when clicking 'show all' button", async () => {
    useNamedPolicyPermissions.mockReturnValueOnce({
      data: permissions,
      mutate: jest.fn(),
    });
    usePermissionsWithProfiles.mockReturnValue({
      permissionsWithProfiles: permissions,
    });
    useNamedPolicyPermissions.mockReturnValueOnce({
      data: sharePermissions,
      mutate: jest.fn(),
    });
    const type = "editors";
    const { queryAllByRole, getByTestId } = renderWithTheme(
      <AgentAccessTable type={type} />
    );
    const button = getByTestId("show-all-button");
    expect(queryAllByRole("cell")).toHaveLength(3);
    userEvent.click(button);
    expect(queryAllByRole("cell")).toHaveLength(4);
  });
  it("shows first 3 permissions by default and when clicking the 'hide' button", async () => {
    useNamedPolicyPermissions.mockReturnValueOnce({
      data: permissions,
      mutate: jest.fn(),
    });
    usePermissionsWithProfiles.mockReturnValue({
      permissionsWithProfiles: permissions,
    });
    useNamedPolicyPermissions.mockReturnValueOnce({
      data: sharePermissions,
      mutate: jest.fn(),
    });
    const type = "editors";
    const { queryAllByRole, getByTestId } = renderWithTheme(
      <AgentAccessTable type={type} permissions={permissions} />
    );
    const showAllButton = getByTestId("show-all-button");
    expect(queryAllByRole("cell")).toHaveLength(3);
    userEvent.click(showAllButton);
    expect(queryAllByRole("cell")).toHaveLength(4);
    const hideButton = getByTestId("hide-button");
    userEvent.click(hideButton);
    expect(queryAllByRole("cell")).toHaveLength(3);
  });
  it("renders a search box which filters by name or webId", () => {
    useNamedPolicyPermissions.mockReturnValueOnce({
      data: permissions,
      mutate: jest.fn(),
    });
    usePermissionsWithProfiles.mockReturnValue({
      permissionsWithProfiles: permissions,
    });
    useNamedPolicyPermissions.mockReturnValueOnce({
      data: sharePermissions,
      mutate: jest.fn(),
    });
    const type = "editors";
    const { getByTestId, queryByText } = renderWithTheme(
      <AgentAccessTable type={type} permissions={permissions} />
    );
    const searchInput = getByTestId("search-input");
    userEvent.type(searchInput, "2");
    expect(queryByText("Example 4")).toBeNull();
    expect(queryByText("Example 2")).not.toBeNull();
  });
  // TODO: this will change once we have groups and a new way of filtering
  it("renders a set of tabs which filter by type", () => {
    const permissionsWithTypes = [
      {
        acl: {
          read: true,
          write: true,
          append: true,
          control: true,
        },
        webId: "https://example1.com/profile/card#me",
        profile: {
          avatar: null,
          name: "Example 1",
          types: ["https://schema.org/Person"],
        },
      },
      {
        acl: {
          read: true,
          write: true,
          append: true,
          control: true,
        },
        webId: "https://example1.com/profile/card#me",
        profile: {
          avatar: null,
          name: "Not a person",
          types: ["Something else"],
        },
      },
    ];

    useNamedPolicyPermissions.mockReturnValue({
      data: permissionsWithTypes,
      mutate: jest.fn(),
    });
    usePermissionsWithProfiles.mockReturnValue({
      permissionsWithProfiles: permissionsWithTypes,
    });
    useNamedPolicyPermissions.mockReturnValue({
      data: sharePermissions,
      mutate: jest.fn(),
    });

    const type = "editors";
    const { getByTestId, queryByText } = renderWithTheme(
      <AgentAccessTable type={type} />
    );
    const tabPeople = getByTestId("tab-people");
    const tabGroups = getByTestId("tab-groups");
    userEvent.click(tabPeople);
    expect(queryByText("Example 1")).not.toBeNull();
    expect(queryByText("Not a person")).toBeNull();
    userEvent.click(tabGroups);
    expect(queryByText("No groups found")).not.toBeNull();
    expect(queryByText("Example 1")).toBeNull();
  });
});
